--- a/main.css
+++ b/main.css
@@ -2,10 +2,33 @@
     background-color: tan;
 }
 
-.head {
+.head-wrapper {
     width: 150px;
     height: 80px;
-    border-radius: 50%;
+    position: relative;
+    padding-top: 80px;
+}
+
+.ear {
+    width: 30px;
+    height: 80px;
+    border-radius: 100px 0 0 100px;
+    position: absolute;
+    top: 20%;
+}
+
+.ear1 {
+    left: 70%;
+}
+
+.ear2 {
+    left: 50%;
+}
+
+.head {
+    width: 100%;
+    height: 100%;
+    border-radius: 50% 20% 0 30%;
 }
 
 .neck {
